[package]
name = "vector_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
vector_sdk = "0.2.1"
nostr-sdk = { version = "0.42.0", features = ["nip04", "nip06", "nip44", "nip59", "nip96"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.28"
serde_json = "1.0.145"
rand = "0.9.2"


